--- a/wlogout/colors.css
+++ b/wlogout/colors.css
@@ -1,7 +1,7 @@
-@define-color wlogout_bg #141318;
-@define-color wlogout_bg_dim #0e0d13;
-@define-color wlogout_fg #e5e1e9;
-@define-color wlogout_fg_muted #c9c5d0;
-@define-color wlogout_accent #c8bfff;
-@define-color wlogout_accent_soft #c9c3dc;
-@define-color wlogout_border #48454f;
+@define-color wlogout_bg #121318;
+@define-color wlogout_bg_dim #0d0e13;
+@define-color wlogout_fg #e2e2e9;
+@define-color wlogout_fg_muted #c5c6d0;
+@define-color wlogout_accent #b1c5ff;
+@define-color wlogout_accent_soft #c0c6dc;
+@define-color wlogout_border #44464f;
