--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -3,102 +3,102 @@
 * Generated with Matugen
 */
 
-    @define-color background #141318;
+    @define-color background #121318;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #313036;
+    @define-color inverse_on_surface #2f3036;
 
-    @define-color inverse_primary #5e5791;
+    @define-color inverse_primary #485d92;
 
-    @define-color inverse_surface #e5e1e9;
+    @define-color inverse_surface #e2e2e9;
 
-    @define-color on_background #e5e1e9;
+    @define-color on_background #e2e2e9;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #30285f;
+    @define-color on_primary #162e60;
 
-    @define-color on_primary_container #e5deff;
+    @define-color on_primary_container #dae2ff;
 
-    @define-color on_primary_fixed #1a1249;
+    @define-color on_primary_fixed #001946;
 
-    @define-color on_primary_fixed_variant #463f77;
+    @define-color on_primary_fixed_variant #2f4578;
 
-    @define-color on_secondary #312e41;
+    @define-color on_secondary #2a3042;
 
-    @define-color on_secondary_container #e5dff9;
+    @define-color on_secondary_container #dce2f9;
 
-    @define-color on_secondary_fixed #1c192b;
+    @define-color on_secondary_fixed #151b2c;
 
-    @define-color on_secondary_fixed_variant #474459;
+    @define-color on_secondary_fixed_variant #404659;
 
-    @define-color on_surface #e5e1e9;
+    @define-color on_surface #e2e2e9;
 
-    @define-color on_surface_variant #c9c5d0;
+    @define-color on_surface_variant #c5c6d0;
 
-    @define-color on_tertiary #482536;
+    @define-color on_tertiary #412742;
 
-    @define-color on_tertiary_container #ffd8e7;
+    @define-color on_tertiary_container #fed7fa;
 
-    @define-color on_tertiary_fixed #301121;
+    @define-color on_tertiary_fixed #2a122c;
 
-    @define-color on_tertiary_fixed_variant #613b4d;
+    @define-color on_tertiary_fixed_variant #593d59;
 
-    @define-color outline #928f99;
+    @define-color outline #8f9099;
 
-    @define-color outline_variant #48454f;
+    @define-color outline_variant #44464f;
 
-    @define-color primary #c8bfff;
+    @define-color primary #b1c5ff;
 
-    @define-color primary_container #463f77;
+    @define-color primary_container #2f4578;
 
-    @define-color primary_fixed #e5deff;
+    @define-color primary_fixed #dae2ff;
 
-    @define-color primary_fixed_dim #c8bfff;
+    @define-color primary_fixed_dim #b1c5ff;
 
     @define-color scrim #000000;
 
-    @define-color secondary #c9c3dc;
+    @define-color secondary #c0c6dc;
 
-    @define-color secondary_container #474459;
+    @define-color secondary_container #404659;
 
-    @define-color secondary_fixed #e5dff9;
+    @define-color secondary_fixed #dce2f9;
 
-    @define-color secondary_fixed_dim #c9c3dc;
+    @define-color secondary_fixed_dim #c0c6dc;
 
     @define-color shadow #000000;
 
-    @define-color source_color #7062cb;
+    @define-color source_color #2069e9;
 
-    @define-color surface #141318;
+    @define-color surface #121318;
 
-    @define-color surface_bright #3a383e;
+    @define-color surface_bright #38393f;
 
-    @define-color surface_container #201f25;
+    @define-color surface_container #1e1f25;
 
-    @define-color surface_container_high #2a292f;
+    @define-color surface_container_high #282a2f;
 
-    @define-color surface_container_highest #35343a;
+    @define-color surface_container_highest #33343a;
 
-    @define-color surface_container_low #1c1b20;
+    @define-color surface_container_low #1a1b21;
 
-    @define-color surface_container_lowest #0e0d13;
+    @define-color surface_container_lowest #0d0e13;
 
-    @define-color surface_dim #141318;
+    @define-color surface_dim #121318;
 
-    @define-color surface_tint #c8bfff;
+    @define-color surface_tint #b1c5ff;
 
-    @define-color surface_variant #48454f;
+    @define-color surface_variant #44464f;
 
-    @define-color tertiary #ecb8ce;
+    @define-color tertiary #e0bbdd;
 
-    @define-color tertiary_container #613b4d;
+    @define-color tertiary_container #593d59;
 
-    @define-color tertiary_fixed #ffd8e7;
+    @define-color tertiary_fixed #fed7fa;
 
-    @define-color tertiary_fixed_dim #ecb8ce;
+    @define-color tertiary_fixed_dim #e0bbdd;
